k8s/mc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mc-service
spec:
  type: NodePort
  selector:
    app: hz-management-center
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 8080
