k8s/mc-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mc-route
spec:
  to:
    kind: Service
    name: mc-service
